<resources>
    <string name="app_name">Movies</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="devastating">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos</string>
    <string name="cast">Cast</string>
    <string name="fragment_actors_avatar_content_description">Actor avatar</string>
    <string name="fragment_films_chosen_text">You chose: %1$s</string>
    <string name="button_back">Back</string>
    <string name="fragment_details_title">Avangers:\nEndGame</string>
    <string name="fragment_details_tag">Action, Adventure, Fantasy</string>
    <string name="fragment_list_tile">Movies list</string>
    <string name="holder_movie_age_rating">13+</string>
    <string name="holder_movie_tag">Action</string>
    <string name="holder_movie_name">Avengers: End Game</string>
</resources>