<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="298dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avengers_background" />

    <ImageView
        android:id="@+id/path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="59dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/path"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="56dp"
        android:text="@string/button_back"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/path"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/age_rating_details"
        android:layout_width="24dp"
        android:layout_height="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="157dp"
        android:text="13+"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/path"></TextView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fragment_details_title"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_rating_details"></TextView>

    <TextView
        android:id="@+id/tv_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fragment_details_tag"
        android:textColor="@color/tagColor"
        android:textFontWeight="300"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"></TextView>

    <ImageView
        android:id="@+id/iv_star_enable0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tag"
        app:srcCompat="@drawable/ic_star_icon"
        app:tint="@color/enableStar"></ImageView>

    <ImageView
        android:id="@+id/iv_star_enable1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toEndOf="@id/iv_star_enable0"
        app:layout_constraintTop_toBottomOf="@id/tv_tag"
        app:srcCompat="@drawable/ic_star_icon"
        app:tint="@color/enableStar"></ImageView>

    <ImageView
        android:id="@+id/iv_star_enable2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toEndOf="@id/iv_star_enable1"
        app:layout_constraintTop_toBottomOf="@id/tv_tag"
        app:srcCompat="@drawable/ic_star_icon"
        app:tint="@color/enableStar"></ImageView>

    <ImageView
        android:id="@+id/iv_star_enable3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toEndOf="@id/iv_star_enable2"
        app:layout_constraintTop_toBottomOf="@id/tv_tag"
        app:srcCompat="@drawable/ic_star_icon"
        app:tint="@color/enableStar"></ImageView>

    <ImageView
        android:id="@+id/iv_star_disable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toEndOf="@id/iv_star_enable3"
        app:layout_constraintTop_toBottomOf="@id/tv_tag"
        app:srcCompat="@drawable/ic_star_icon"
        app:tint="@color/disableStar"></ImageView>

    <TextView
        android:id="@+id/tv_review"
        android:layout_width="112dp"
        android:layout_height="20dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:text="125 REVIEWS"
        android:textColor="@color/disableStar"
        android:textFontWeight="900"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/iv_star_disable"
        app:layout_constraintTop_toBottomOf="@id/tv_tag"></TextView>

    <TextView
        android:id="@+id/tv_story_line"
        android:layout_width="343dp"
        android:layout_height="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:text="Storyline"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_review"></TextView>

    <TextView
        android:id="@+id/tv_devastate"
        android:layout_width="343dp"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:lineHeight="20dp"
        android:text="@string/devastating"
        android:textColor="@color/devastating"
        android:textFontWeight="300"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_story_line"></TextView>

    <TextView
        android:id="@+id/tv_cast"
        android:layout_width="243dp"
        android:layout_height="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:lineHeight="20dp"
        android:text="@string/cast"
        android:textColor="@color/devastating"
        android:textFontWeight="900"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_devastate"></TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_actors"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cast" />
</androidx.constraintlayout.widget.ConstraintLayout>